--- a/tools/math.html
+++ b/tools/math.html
@@ -47,8 +47,25 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=AM_CHTML"></script>
 
 		<script>
+			let output = document.getElementById("math_output")
+			let input = document.getElementById("math_input")
+
 			document.getElementById("render").onclick = function() {
-				alert(document.getElementById("math_input").value)
+				// Delete existing elements
+				while (output.children.length != 0) {
+					output.children[0].remove()
+				}
+
+				// Create an element for each line of math input
+				let inputs = input.value.split("\n")
+				inputs.forEach(function(value, index) {
+					let p = document.createElement("p")
+					p.innerHTML = "`" + value + "`"
+					output.appendChild(p)
+				})
+
+				// Tell MathJax to re-render
+				MathJax.Hub.Queue(['Typeset', MathJax.Hub, 'math-display']);
 			}
 		</script>
 	</body>
