separate js and css files for tools/math.html

--- a/tools/math.html
+++ b/tools/math.html
@@ -3,27 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<link href="../sakura-vader.css" rel="stylesheet">
+		<link href="math.css" rel="stylesheet">
+
 		<title>AsciiMath but with newlines</title>
-
-		<style>
-			body {
-				margin-top: 50px;
-			}
-
-			h1 {
-				margin: 0;
-			}
-
-			#links {
-				display: grid;
-				grid-gap: 20px;
-				grid-template-columns: auto auto 1fr;
-			}
-
-			textarea {
-				margin-top: 5px;
-			}
-		</style>
 	</head>
 	<body>
 		<h1>AsciiMath but with newlines</h1>
@@ -45,28 +27,6 @@
 		<input type="button" id="render" value="Render">
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=AM_CHTML"></script>
-
-		<script>
-			let output = document.getElementById("math_output")
-			let input = document.getElementById("math_input")
-
-			document.getElementById("render").onclick = function() {
-				// Delete existing elements
-				while (output.children.length != 0) {
-					output.children[0].remove()
-				}
-
-				// Create an element for each line of math input
-				let inputs = input.value.split("\n")
-				inputs.forEach(function(value, index) {
-					let p = document.createElement("p")
-					p.innerHTML = "`" + value + "`"
-					output.appendChild(p)
-				})
-
-				// Tell MathJax to re-render
-				MathJax.Hub.Queue(['Typeset', MathJax.Hub, 'math-display']);
-			}
-		</script>
+		<script src="math.js"></script>
 	</body>
 </html>
