time tool UI tweak

--- a/tools/time.html
+++ b/tools/time.html
@@ -21,6 +21,9 @@
 		<br>
 		<input type="button" id="convert" value="Convert">
 
+		<p>Input: Unix time<br>Output: Default JS date format
+		<p>Input: Any consistent date format<br>Output: Unix time</p>
+
 		<script src="time.js"></script>
 	</body>
 </html>
