--- a/tools/math.html
+++ b/tools/math.html
@@ -2,8 +2,16 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+
 		<link href="../sakura-vader.css" rel="stylesheet">
-		<link href="math.css" rel="stylesheet">
+		<link href="tools.css" rel="stylesheet">
+
+		<style>
+			textarea {
+				margin-top: 5px;
+			}
+		</style>
+
 
 		<title>AsciiMath but with newlines</title>
 	</head>
