--- a/tools/time.html
+++ b/tools/time.html
@@ -2,8 +2,19 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+
 		<link href="../sakura-vader.css" rel="stylesheet">
-		<link href="time.css" rel="stylesheet">
+		<link href="tools.css" rel="stylesheet">
+
+		<style>
+			p {
+				margin: 20px 0;
+			}
+
+			textarea {
+				height: 100px;
+			}
+		</style>
 
 		<title>Unix / Epoch  time conversion</title>
 	</head>
