more broken links to update

--- a/tools/math.html
+++ b/tools/math.html
@@ -18,7 +18,7 @@
 	<body>
 		<h1>AsciiMath but with newlines</h1>
 		<div id="links">
-			<a id="tools_index" href="../tools.html">Tools Index</a>
+			<a id="tools_index" href="tools.html">Tools Index</a>
 			<a href="http://asciimath.org/">AsciiMath</a>
 		</div>
 
