--- a/tools/time.html
+++ b/tools/time.html
@@ -21,7 +21,7 @@
 	<body>
 		<h1>Unix / Epoch time conversion</h1>
 		<div id="links">
-			<a id="tools_index" href="../tools.html">Tools Index</a>
+			<a id="tools_index" href="tools.html">Tools Index</a>
 			<a href="https://en.wikipedia.org/wiki/Unix_time">What is Unix time?</a>
 		</div>
 
