--- a/tools/wc.html
+++ b/tools/wc.html
@@ -27,7 +27,7 @@
 	<body>
 		<h1>Word Counter</h1>
 		<div id="links">
-			<a id="tools_index" href="../tools.html">Tools Index</a>
+			<a id="tools_index" href="tools.html">Tools Index</a>
 		</div>
 
 		<hr>
