--- a/tools/tools.html
+++ b/tools/tools.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<link href="sakura-vader.css" rel="stylesheet">
+		<link href="../sakura-vader.css" rel="stylesheet">
 
 		<title>Tools</title>
 	</head>
