--- a/games/games.html
+++ b/games/games.html
@@ -13,7 +13,7 @@
 		<ul>
 			<li><a>2021 and earlier</a></li>
 			<li><a>2022</a></li>
-			<li><a>Not mine</a></li>
+			<li><a href="other/other.html">Not mine</a></li>
 		</ul>
 
 		<a href="../index.html">Home</a>
