evade_clone: Add credit page

--- a/games/other/other.html
+++ b/games/other/other.html
@@ -13,7 +13,9 @@
 		<ul>
 			<li>
 				<a>evades.io clone</a>
-				<p>This was made by <a>Ravelfett</a>!</p>
+
+				<p>This was made by
+				<a href="evades_clone/credit.html">Ravelfett</a>!</p>
 			</li>
 		</ul>
 
