--- a/games/other/evades_clone/index.html
+++ b/games/other/evades_clone/index.html
@@ -126,6 +126,7 @@
           <option>Lantern</option>
           <option>Pole</option>
           <option>Polygon</option>
+          <option>Clown</option>
           <option>Idk</option>
         </select>
       </div>
@@ -161,7 +162,11 @@
       <div>Settings:</div>
       <div class="settingsElement">
         <input type="checkbox" id="checkbox" checked>
-  <label >Enemy outline</label>
+  <label>Enemy outline</label>
+  <br>
+  <br>
+        <input type="checkbox" id="sandbox">
+  <label>Sandbox(60FPS,less frictions)</label>
       </div>
     </div>
   </div>
@@ -177,4 +182,5 @@
   <script src="game.js"></script>
   <script src="drawer.js"></script>
   <script src="main.js"></script>
-<div style="text-
+</body>
+</html>
