evades_clone: Credit inside index.html

--- a/games/other/evades_clone/index.html
+++ b/games/other/evades_clone/index.html
@@ -99,6 +99,14 @@
 		.settingsElement {
 			margin: 5px;
 		}
+
+		#credit {
+			background-color: red;
+			position: absolute;
+			top: 50%;
+			right: 100px;
+			padding: 10px;
+		}
 	</style>
 	<link rel="icon" href="texture/favicon.ico" />
 </head>
@@ -170,6 +178,14 @@
 			</div>
 		</div>
 	</div>
+
+	<div id="credit">
+		<h3><a href="credit.html" target="_blank">Ravelfett made this!</a></h3>
+		<p><em>This page</em> is just a mirror.</p>
+		<br>
+		<p><a href="https://evades.io">(Original evades.io)</a></p>
+	</div>
+
 	<div id="gamed" style="display:none;">
 		<canvas id="game" oncontextmenu="return false;" width="1280" height="720"></canvas>
 	</div>
