--- a/games/other/evades_clone/index.html
+++ b/games/other/evades_clone/index.html
@@ -164,7 +164,7 @@
 			</select>
 		</div>
 		<div id="name">
-			<input type="text" id="nick" value="Ravelfett">
+			<input type="text" id="nick" value="Ravelfett"> <!-- Changing the default would be counteproductive -->
 		</div>
 		<div id="settings">
 			<div>Settings:</div>
