--- a/games/other/other.html
+++ b/games/other/other.html
@@ -12,7 +12,7 @@
 
 		<ul>
 			<li>
-				<a>evades.io clone</a>
+				<a href="evades_clone/index.html">evades.io clone</a>
 
 				<p>This was made by
 				<a href="evades_clone/credit.html">Ravelfett</a>!</p>
