--- a/games/games.html
+++ b/games/games.html
@@ -12,7 +12,7 @@
 
 		<ul>
 			<li><a>2021 and earlier</a></li>
-			<li><a>2022</a></li>
+			<li><a href="2022/2022.html">2022</a></li>
 			<li><a href="other/other.html">Not mine</a></li>
 		</ul>
 
