--- a/games/old/old.html
+++ b/games/old/old.html
@@ -10,21 +10,14 @@
 		<h1>2021 and earlier</h1>
 
 		<ul>
-			<li><a href="angry_birds/index.html">03-30: Angry Birds</a></li>
-			<li><a href="number_guesser/public/index.html">03-29: Guessing Game</a></li>
-			<li><a href="magic_ball/index.html">03-24: Magic Ball</a></li>
-			<li><a href="dice/public/index.html">03-24: Dice App</a></li>
-			<li><a href="conversions/build/index.html">03-08: Conversions</a></li>
-			<li><a href="binary_trick/build/index.html">03-04: Binary Trick</a></li>
-			<li><a href="circles/build/index.html">03-03: Circles</a></li>
-			<li><a href="pong/index.html">03-03: Pong</a></li>
-			<li><a href="madlib/index.html">03-02: Mad Libs</a></li>
-			<li><a href="bounce/index.html">03-01: Bouncy Ball</a></li>
-			<li><a href="counter_strike/index.html">02-25: Counter Strike</a></li>
-			<li><a href="poke/index.html">02-24: Poke the Pig</a></li>
-			<li><a href="smth/index.html">02-23: Something Something</a></li>
-			<li><a href="https://github.com/michaelskyba/michaelskyba.github.io/tree/master/games/2022/knock">02-20: Knock Knock</a></li>
-			<li><a href="mario/index.html">02-09: Mario</a></li>
+			<li><a href="./mandelbrot/mandelbrot.html">2019-09: Static Mandelbrot Set Renderer</a></li>
+			<li><a href="./xorbw/xorbw.html">2019-08: XOR on colours</a></li>
+			<li><a href="./genetic_algorithm/Canadian Vision.html">2018-10: Degenerate Genetic Algorithm</a></li>
+			<li><a href="./village/village.html">2018-09: Village</a></li>
+			<li><a href="./flappy_bird/flappy.html">2018-06: Flappy Bird</a></li>
+			<li><a href="./highway/highway.html">2018-03: Highway</a></li>
+			<li><a href="./escape/Title Screen.html">2018-02: Escape</a></li>
+			<li><a href="./test_game/game.html">2017-02: Canvas test</a></li>
 		</ul>
 
 		<a href="../games.html">Games Index</a>
