games/games.html: Add link to old games page

--- a/games/games.html
+++ b/games/games.html
@@ -11,7 +11,7 @@
 		<p>Beware: possibly a lot of JavaScript</p>
 
 		<ul>
-			<li><a>2021 and earlier</a></li>
+			<li><a href="old/old.html">2021 and earlier</a></li>
 			<li><a href="2022/2022.html">2022</a></li>
 			<li><a href="other/other.html">Not mine</a></li>
 		</ul>
