games/old/old.html: Add disclaimer

--- a/games/old/old.html
+++ b/games/old/old.html
@@ -9,6 +9,10 @@
 	<body>
 		<h1>2021 and earlier</h1>
 
+		<p>Warning: To preserve history, I've left the code of these in their
+		cringey, ugly, messy states. I by no means write "clean" software now
+		but it has certainly improved since then.</p>
+
 		<ul>
 			<li><a href="./mandelbrot/mandelbrot.html">2019-09: Static Mandelbrot Set Renderer</a></li>
 			<li><a href="./xorbw/xorbw.html">2019-08: XOR on colours</a></li>
