games/old/old.html: Note on genetic algorithm project

--- a/games/old/old.html
+++ b/games/old/old.html
@@ -16,7 +16,32 @@
 		<ul>
 			<li><a href="./mandelbrot/mandelbrot.html">2019-09: Static Mandelbrot Set Renderer</a></li>
 			<li><a href="./xorbw/xorbw.html">2019-08: XOR on colours</a></li>
-			<li><a href="./genetic_algorithm/Canadian Vision.html">2018-10: Degenerate Genetic Algorithm</a></li>
+			<li>
+				<a href="./genetic_algorithm/Canadian Vision.html">2018-10: Degenerate Genetic Algorithm</a>
+
+				<p>I was very interested in Artificial Intelligence for a while
+				(until I realized that you should know calculus to properly
+				grasp backpropagation). Particularly, I derived immense
+				satification from watching something get better and better at a
+				task. I tried doing a little bit of research and then I made
+				this garbage.</p>
+
+				<p>The gray square tries to get to the yellow square without
+				actually knowing where it is. Natural selection kills off
+				squares that don't get close and random mutations will
+				eventually lead it to the goal.</p>
+
+				<p>Unlike an actually useful AI, each subject doesn't attempt to
+				emulate a brain. It's been too long for me to remember exactly
+				how I implemented it and the code is too yucky to comb through,
+				but I'm pretty sure each subject was just an (x, y) offset pair.
+				So, each fitness test would have it run its offset from the
+				initial position and then use the Pythagorean theorem to check
+				the distance.</p>
+
+				<p>Warning: I hated making forms so there quite a few alert()
+				popups at the start.</p>
+			</li>
 			<li><a href="./village/village.html">2018-09: Village</a></li>
 			<li><a href="./flappy_bird/flappy.html">2018-06: Flappy Bird</a></li>
 			<li><a href="./highway/highway.html">2018-03: Highway</a></li>
