games/old/old.html: Add link to and note on Card Guesser

--- a/games/old/old.html
+++ b/games/old/old.html
@@ -14,6 +14,20 @@
 		but it has certainly improved since then.</p>
 
 		<ul>
+			<li>
+				<a href="./card_guesser/index.html">2019-09: Card Guesser</a>
+
+				<p>Card Guesser is a simple game where you lose and gain points
+				based on luck. I couldn't make a very efficient system for
+				detecting where the user clicks the mouse on the canvas, so
+				there were lot of if-else statements, which explains the hefty
+				amount of code.</p>
+
+				<p>This game was made for a school project about probability.
+				From what I remember, it's optimal to win twice (tokens gained =
+				11) and then cash out, but you would still have a loss on
+				average. Don't gamble with real money.</p>
+			</li>
 			<li><a href="./mandelbrot/mandelbrot.html">2019-09: Static Mandelbrot Set Renderer</a></li>
 			<li><a href="./xorbw/xorbw.html">2019-08: XOR on colours</a></li>
 			<li>
