tools.html: add development link for word counter

--- a/tools/tools.html
+++ b/tools/tools.html
@@ -23,7 +23,10 @@
 			have been better as a CLI, but I felt like implementing it in JavaScript
 			for some reason.</p>
 
-			<li><a href="wc.html">Word counter</a></li>
+			<li>
+				<a href="wc.html">Word counter</a>
+				| <a href="https://www.youtube.com/watch?v=n7ldnJmO8D4">Development</a>
+			</li>
 			<p>This lets you count the number of words and characters in a block of text
 			that you paste in. Again, it would make much more sense as a CLI (use
 			<code>wc</code>) - I made this primarily for people on Windows and as
