relink after filename changes

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<p>Beware: possibly a lot of JavaScript</p>
 
 		<ul>
-			<li><a href="old/old.html">2021 and earlier</a></li>
-			<li><a href="2022/2022.html">2022</a></li>
-			<li><a href="other/other.html">Not mine</a></li>
+			<li><a href="old/index.html">2021 and earlier</a></li>
+			<li><a href="2022/index.html">2022</a></li>
+			<li><a href="mirror/index.html">Mirrors</a></li>
 		</ul>
 
 		<a href="../index.html">Home</a>
