--- a/mirror/evades_clone/credit.html
+++ b/mirror/evades_clone/credit.html
@@ -46,6 +46,6 @@
 		banner on each page. Overall, I believe that a GitHub pages site would
 		provide a better experience.</p>
 
-		<a href="../other.html">Back</a>
+		<a href="../index.html">Back</a>
 	</body>
 </html>
