--- a/mirror/index.html
+++ b/mirror/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<link href="../../sakura-vader.css" rel="stylesheet">
 
-		<title>Not mine</title>
+		<title>Mirrors</title>
 	</head>
 	<body>
-		<h1>Not mine</h1>
+		<h1>Mirrors</h1>
 		<p>These are games that I <strong>did not make</strong>.</p>
 
 		<ul>
@@ -19,6 +19,6 @@
 			</li>
 		</ul>
 
-		<a href="../games.html">Games Index</a>
+		<a href="../index.html">Games Index</a>
 	</body>
 </html>
