--- a/old/index.html
+++ b/old/index.html
@@ -53,8 +53,8 @@
 				initial position and then use the Pythagorean theorem to check
 				the distance.</p>
 
-				<p>Warning: I hated making forms so there quite a few alert()
-				popups at the start.</p>
+				<p>Warning: I hated making forms so there are quite a few
+				alert() popups at the start.</p>
 			</li>
 			<li><a href="./village/village.html">2018-09: Village</a></li>
 			<li><a href="./flappy_bird/flappy.html">2018-06: Flappy Bird</a></li>
@@ -63,6 +63,6 @@
 			<li><a href="./test_game/game.html">2017-02: Canvas test</a></li>
 		</ul>
 
-		<a href="../games.html">Games Index</a>
+		<a href="../index.html">Games Index</a>
 	</body>
 </html>
