--- a/tools/time.html
+++ b/tools/time.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<link href="../sakura-vader.css" rel="stylesheet">
+		<link href="../../sakura-vader.css" rel="stylesheet">
 		<link href="tools.css" rel="stylesheet">
 
 		<style>
