--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<link href="../sakura-vader.css" rel="stylesheet">
+		<link href="/sakura.css" rel="stylesheet">
 
 		<title>Games</title>
 	</head>
@@ -11,11 +11,11 @@
 		<p>Beware: possibly a lot of JavaScript</p>
 
 		<ul>
-			<li><a href="old/index.html">2021 and earlier</a></li>
-			<li><a href="2022/index.html">2022</a></li>
-			<li><a href="mirror/index.html">Mirrors</a></li>
+			<li><a href="old/">2021 and earlier</a></li>
+			<li><a href="2022/">2022</a></li>
+			<li><a href="mirror/">Mirrors</a></li>
 		</ul>
 
-		<a href="../index.html">Home</a>
+		<a href="/">Home</a>
 	</body>
 </html>
