--- a/mirror/evades_clone/credit.html
+++ b/mirror/evades_clone/credit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<link href="../../../sakura-vader.css" rel="stylesheet">
+		<link href="/sakura.css" rel="stylesheet">
 
 		<title>evades.io clone credit</title>
 	</head>
@@ -46,6 +46,6 @@
 		banner on each page. Overall, I believe that a GitHub pages site would
 		provide a better experience.</p>
 
-		<a href="../index.html">Back</a>
+		<a href="../">Back</a>
 	</body>
 </html>
