--- a/mirror/index.html
+++ b/mirror/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<link href="../../sakura-vader.css" rel="stylesheet">
+		<link href="/sakura.css" rel="stylesheet">
 
 		<title>Mirrors</title>
 	</head>
@@ -12,13 +12,13 @@
 
 		<ul>
 			<li>
-				<a href="evades_clone/index.html">evades.io clone</a>
+				<a href="evades_clone/">evades.io clone</a>
 
 				<p>This was made by
 				<a href="evades_clone/credit.html">Ravelfett</a>!</p>
 			</li>
 		</ul>
 
-		<a href="../index.html">Games Index</a>
+		<a href="../">Games Index</a>
 	</body>
 </html>
