--- a/old/escape/ending.html
+++ b/old/escape/ending.html
@@ -79,7 +79,7 @@
 
             function start()
             {
-                reDir("Title Screen.html");  
+                reDir("index.html");  
             }
 
             function story()
