--- a/old/index.html
+++ b/old/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<link href="../../sakura-vader.css" rel="stylesheet">
+		<link href="/sakura.css" rel="stylesheet">
 
 		<title>2021 and earlier</title>
 	</head>
@@ -15,7 +15,7 @@
 
 		<ul>
 			<li>
-				<a href="./card_guesser/index.html">2019-09: Card Guesser</a>
+				<a href="card_guesser/">2019-09: Card Guesser</a>
 
 				<p>Card Guesser is a simple game where you lose and gain points
 				based on luck. I couldn't make a very efficient system for
@@ -28,10 +28,10 @@
 				11) and then cash out, but you would still have a loss on
 				average. Don't gamble with real money.</p>
 			</li>
-			<li><a href="./mandelbrot/mandelbrot.html">2019-09: Static Mandelbrot Set Renderer</a></li>
-			<li><a href="./xorbw/xorbw.html">2019-08: XOR on colours</a></li>
+			<li><a href="mandelbrot/">2019-09: Static Mandelbrot Set Renderer</a></li>
+			<li><a href="xorbw/">2019-08: XOR on colours</a></li>
 			<li>
-				<a href="./genetic_algorithm/Canadian Vision.html">2018-10: Degenerate Genetic Algorithm</a>
+				<a href="genetic_algorithm/">2018-10: Degenerate Genetic Algorithm</a>
 
 				<p>I was very interested in Artificial Intelligence for a while
 				(until I realized that you should know calculus to properly
@@ -56,13 +56,13 @@
 				<p>Warning: I hated making forms so there are quite a few
 				alert() popups at the start.</p>
 			</li>
-			<li><a href="./village/village.html">2018-09: Village</a></li>
-			<li><a href="./flappy_bird/flappy.html">2018-06: Flappy Bird</a></li>
-			<li><a href="./highway/highway.html">2018-03: Highway</a></li>
-			<li><a href="./escape/Title Screen.html">2018-02: Escape</a></li>
-			<li><a href="./test_game/game.html">2017-02: Canvas test</a></li>
+			<li><a href="village/">2018-09: Village</a></li>
+			<li><a href="flappy_bird/">2018-06: Flappy Bird</a></li>
+			<li><a href="highway/">2018-03: Highway</a></li>
+			<li><a href="escape/">2018-02: Escape</a></li>
+			<li><a href="test_game/">2017-02: Canvas test</a></li>
 		</ul>
 
-		<a href="../index.html">Games Index</a>
+		<a href="../">Games Index</a>
 	</body>
 </html>
