--- a/tools/index.html
+++ b/tools/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<link href="../../sakura-vader.css" rel="stylesheet">
+		<link href="/sakura.css" rel="stylesheet">
 
 		<title>Tools</title>
 	</head>
@@ -18,7 +18,7 @@
 			of my use cases, but its live demo doesn't support line breaks. This
 			is an alternative UI which solves my issue.</p>
 
-			<li><a href="time.html">Unix / Epoch time conversions</a></li>
+			<li><a href="time.html">Unix/Epoch time conversions</a></li>
 			<p>This lets you convert between Unix time and normal time. It would
 			have been better as a CLI, but I felt like implementing it in JavaScript
 			for some reason.</p>
@@ -33,6 +33,6 @@
 			TypeScript practice.</p>
 		</lu>
 
-		<a href="../index.html">Home</a>
+		<a href="/">Home</a>
 	</body>
 </html>
