--- a/tools/time.html
+++ b/tools/time.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<link href="../../sakura-vader.css" rel="stylesheet">
+		<link href="/sakura.css" rel="stylesheet">
 		<link href="tools.css" rel="stylesheet">
 
 		<style>
@@ -16,13 +16,13 @@
 			}
 		</style>
 
-		<title>Unix / Epoch  time conversion</title>
+		<title>Unix/Epoch time conversion</title>
 	</head>
 
 	<body>
-		<h1>Unix / Epoch time conversion</h1>
+		<h1>Unix/Epoch time conversion</h1>
 		<div id="links">
-			<a id="tools_index" href="tools.html">Tools Index</a>
+			<a id="tools_index" href="./">Tools Index</a>
 			<a href="https://en.wikipedia.org/wiki/Unix_time">What is Unix time?</a>
 		</div>
 
