--- a/tools/math.html
+++ b/tools/math.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<link href="../../sakura-vader.css" rel="stylesheet">
+		<link href="/sakura.css" rel="stylesheet">
 		<link href="tools.css" rel="stylesheet">
 
 		<style>
@@ -19,7 +19,7 @@
 	<body>
 		<h1>AsciiMath but with newlines</h1>
 		<div id="links">
-			<a id="tools_index" href="tools.html">Tools Index</a>
+			<a id="tools_index" href="./">Tools Index</a>
 			<a href="http://asciimath.org/">AsciiMath</a>
 		</div>
 
