evades_clone original down

--- a/mirror/evades_clone/credit.html
+++ b/mirror/evades_clone/credit.html
@@ -46,6 +46,9 @@
 		banner on each page. Overall, I believe that a GitHub pages site would
 		provide a better experience.</p>
 
+		<p>Update: As of 2022-10-16, I can see that the original is down. Maybe
+		archive.org has it, but I'm glad that I saved it.</p>
+
 		<a href="../">Back</a>
 	</body>
 </html>
