math.html: specifically link to asciimath syntax

--- a/tools/math.html
+++ b/tools/math.html
@@ -20,7 +20,7 @@
 		<h1>AsciiMath but with newlines</h1>
 		<div id="links">
 			<a id="tools_index" href="./">Tools Index</a>
-			<a href="http://asciimath.org/">AsciiMath</a>
+			<a href="http://asciimath.org/#syntax">Syntax</a>
 		</div>
 
 		<hr style="margin-bottom: 35px;">
