--- a/tools/asciimath/index.html
+++ b/tools/asciimath/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 
 		<link href="/sakura.css" rel="stylesheet">
-		<link href="tools.css" rel="stylesheet">
+		<link href="../tools.css" rel="stylesheet">
 
 		<style>
 			textarea {
@@ -19,7 +19,7 @@
 	<body>
 		<h1>AsciiMath but with newlines</h1>
 		<div id="links">
-			<a id="tools_index" href="./">Tools Index</a>
+			<a id="tools_index" href="..">Tools Index</a>
 			<a href="http://asciimath.org/#syntax">Syntax</a>
 		</div>
 
@@ -36,6 +36,6 @@
 		<input type="button" id="render" value="Render">
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=AM_CHTML"></script>
-		<script src="math.js"></script>
+		<script src="main.js"></script>
 	</body>
 </html>
