--- a/tools/epoch/index.html
+++ b/tools/epoch/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 
 		<link href="/sakura.css" rel="stylesheet">
-		<link href="tools.css" rel="stylesheet">
+		<link href="../tools.css" rel="stylesheet">
 
 		<style>
 			p {
@@ -22,7 +22,7 @@
 	<body>
 		<h1>Unix/Epoch time conversion</h1>
 		<div id="links">
-			<a id="tools_index" href="./">Tools Index</a>
+			<a id="tools_index" href="..">Tools Index</a>
 			<a href="https://en.wikipedia.org/wiki/Unix_time">What is Unix time?</a>
 		</div>
 
@@ -36,6 +36,6 @@
 		<p>Input: Unix time<br>Output: Default JS date format
 		<p>Input: Any consistent date format<br>Output: Unix time</p>
 
-		<script src="time.js"></script>
+		<script src="main.js"></script>
 	</body>
 </html>
