--- a/tools/index.html
+++ b/tools/index.html
@@ -13,18 +13,18 @@
 		<p>These are some small JavaScript scripts.</p>
 
 		<ul>
-			<li><a href="math.html">AsciiMath but with newlines</a></li>
+			<li><a href="asciimath/">AsciiMath but with newlines</a></li>
 			<p>AsciiMath is a really convenient alternative to LaTeX for most
 			of my use cases, but its live demo doesn't support line breaks. This
 			is an alternative UI which solves my issue.</p>
 
-			<li><a href="time.html">Unix/Epoch time conversions</a></li>
+			<li><a href="epoch/">Unix/Epoch time conversions</a></li>
 			<p>This lets you convert between Unix time and normal time. It would
 			have been better as a CLI, but I felt like implementing it in JavaScript
 			for some reason.</p>
 
 			<li>
-				<a href="wc.html">Word counter</a>
+				<a href="wc/">Word counter</a>
 				| <a href="https://www.youtube.com/watch?v=n7ldnJmO8D4">Development</a>
 			</li>
 			<p>This lets you count the number of words and characters in a block of text
