--- a/tools/wc/index.html
+++ b/tools/wc/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 
 		<link href="/sakura.css" rel="stylesheet">
-		<link href="tools.css" rel="stylesheet">
+		<link href="../tools.css" rel="stylesheet">
 
 		<style>
 			textarea {
@@ -28,7 +28,7 @@
 	<body>
 		<h1>Word Counter</h1>
 		<div id="links">
-			<a id="tools_index" href="./">Tools Index</a>
+			<a id="tools_index" href="..">Tools Index</a>
 		</div>
 
 		<hr>
@@ -49,6 +49,6 @@
 			<li>All characters, including spaces and linebreaks, are counted for "characters".</li>
 		</ul>
 
-		<script src="wc.js"></script>
+		<script src="main.js"></script>
 	</body>
 </html>
