Remove useless tools_index IDs

--- a/tools/wc/index.html
+++ b/tools/wc/index.html
@@ -28,7 +28,7 @@
 	<body>
 		<h1>Word Counter</h1>
 		<div id="links">
-			<a id="tools_index" href="..">Tools Index</a>
+			<a href="..">Tools Index</a>
 		</div>
 
 		<hr>
