--- a/tools/asciimath/index.html
+++ b/tools/asciimath/index.html
@@ -19,7 +19,7 @@
 	<body>
 		<h1>AsciiMath but with newlines</h1>
 		<div id="links">
-			<a id="tools_index" href="..">Tools Index</a>
+			<a href="..">Tools Index</a>
 			<a href="http://asciimath.org/#syntax">Syntax</a>
 		</div>
 
