--- a/tools/epoch/index.html
+++ b/tools/epoch/index.html
@@ -22,7 +22,7 @@
 	<body>
 		<h1>Unix/Epoch time conversion</h1>
 		<div id="links">
-			<a id="tools_index" href="..">Tools Index</a>
+			<a href="..">Tools Index</a>
 			<a href="https://en.wikipedia.org/wiki/Unix_time">What is Unix time?</a>
 		</div>
 
