matrix_trans: Basic HTML

--- a/tools/index.html
+++ b/tools/index.html
@@ -24,14 +24,18 @@
 			for some reason.</p>
 
 			<li>
-				<a href="wc/">Word counter</a>
+				<a href="wc/">Word Counter</a>
 				| <a href="https://www.youtube.com/watch?v=n7ldnJmO8D4">Development</a>
 			</li>
 			<p>This lets you count the number of words and characters in a block of text
 			that you paste in. Again, it would make much more sense as a CLI (use
 			<code>wc</code>) - I made this primarily for people on Windows and as
 			TypeScript practice.</p>
-		</lu>
+
+			<li><a href="matrix_trans/">Matrix Transformations</a></li>
+			<p>This is a calculator for finding new values of 2D coordinates
+			based on a 2x2 linear transformation matrix.</>
+		</ul>
 
 		<a href="/">Home</a>
 	</body>
