Parse matrix transformation input

--- a/tools/matrix_trans/index.html
+++ b/tools/matrix_trans/index.html
@@ -51,8 +51,12 @@
 
 
 		<ol>
-			<li>Map (1, 0) to (<input placeholder="x₁" value="2">, <input placeholder="y₁" value="0">)</li>
-			<li>Map (0, 1) to (<input placeholder="x₂" value="0">, <input placeholder="y₂" value="1">)</li>
+			<li>Map (1, 0) to
+				(<input placeholder="x₁" value="2" id="x1">,
+				<input placeholder="y₁" value="0" id="y1">)</li>
+			<li>Map (0, 1) to
+				(<input placeholder="x₂" value="0" id="x2">,
+				<input placeholder="y₂" value="1" id="y2">)</li>
 		</ol>
 
 		<hr>
