--- a/tools/matrix_trans/index.html
+++ b/tools/matrix_trans/index.html
@@ -3,8 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<!--<link href="/sakura.css" rel="stylesheet">-->
-		<link href="https://michaelskyba.github.io/sakura.css" rel="stylesheet">
+		<link href="/sakura.css" rel="stylesheet">
 		<link href="../tools.css" rel="stylesheet">
 
 		<style>
