--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -14,6 +14,72 @@
 
 		<canvas id="canvas" width="0" height="0"></canvas>
 
+		<main>
+			<section id="stats">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+				Morbi eleifend porta eros, sit amet viverra massa interdum ac.
+				Praesent eu odio et ligula luctus placerat sed ut quam. In hac
+				habitasse platea dictumst. Mauris fringilla augue et quam
+				pulvinar, auctor semper metus vulputate. Vivamus vitae massa
+				neque. Nullam condimentum nunc eleifend massa condimentum
+				lacinia. Nunc semper pharetra erat at pharetra. Cras imperdiet
+				ornare augue id interdum. Nulla venenatis felis eu sodales
+				dapibus. Nullam felis augue, lacinia et lacinia venenatis,
+				tincidunt at purus. Sed egestas neque arcu, ut facilisis tortor
+				volutpat vitae. Nulla imperdiet ac turpis et elementum. Duis
+				elementum lacus eros, vel euismod purus blandit sed. Curabitur
+				sem purus, pellentesque vel eleifend eu, accumsan eget erat.
+				Integer lobortis efficitur accumsan.</p>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+				Morbi eleifend porta eros, sit amet viverra massa interdum ac.
+				Praesent eu odio et ligula luctus placerat sed ut quam. In hac
+				habitasse platea dictumst. Mauris fringilla augue et quam
+				pulvinar, auctor semper metus vulputate. Vivamus vitae massa
+				neque. Nullam condimentum nunc eleifend massa condimentum
+				lacinia. Nunc semper pharetra erat at pharetra. Cras imperdiet
+				ornare augue id interdum. Nulla venenatis felis eu sodales
+				dapibus. Nullam felis augue, lacinia et lacinia venenatis,
+				tincidunt at purus. Sed egestas neque arcu, ut facilisis tortor
+				volutpat vitae. Nulla imperdiet ac turpis et elementum. Duis
+				elementum lacus eros, vel euismod purus blandit sed. Curabitur
+				sem purus, pellentesque vel eleifend eu, accumsan eget erat.
+				Integer lobortis efficitur accumsan.</p>
+			</section>
+
+			<section id="config">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+				Morbi eleifend porta eros, sit amet viverra massa interdum ac.
+				Praesent eu odio et ligula luctus placerat sed ut quam. In hac
+				habitasse platea dictumst. Mauris fringilla augue et quam
+				pulvinar, auctor semper metus vulputate. Vivamus vitae massa
+				neque. Nullam condimentum nunc eleifend massa condimentum
+				lacinia. Nunc semper pharetra erat at pharetra. Cras imperdiet
+				ornare augue id interdum. Nulla venenatis felis eu sodales
+				dapibus. Nullam felis augue, lacinia et lacinia venenatis,
+				tincidunt at purus. Sed egestas neque arcu, ut facilisis tortor
+				volutpat vitae. Nulla imperdiet ac turpis et elementum. Duis
+				elementum lacus eros, vel euismod purus blandit sed. Curabitur
+				sem purus, pellentesque vel eleifend eu, accumsan eget erat.
+				Integer lobortis efficitur accumsan.</p>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+				Morbi eleifend porta eros, sit amet viverra massa interdum ac.
+				Praesent eu odio et ligula luctus placerat sed ut quam. In hac
+				habitasse platea dictumst. Mauris fringilla augue et quam
+				pulvinar, auctor semper metus vulputate. Vivamus vitae massa
+				neque. Nullam condimentum nunc eleifend massa condimentum
+				lacinia. Nunc semper pharetra erat at pharetra. Cras imperdiet
+				ornare augue id interdum. Nulla venenatis felis eu sodales
+				dapibus. Nullam felis augue, lacinia et lacinia venenatis,
+				tincidunt at purus. Sed egestas neque arcu, ut facilisis tortor
+				volutpat vitae. Nulla imperdiet ac turpis et elementum. Duis
+				elementum lacus eros, vel euismod purus blandit sed. Curabitur
+				sem purus, pellentesque vel eleifend eu, accumsan eget erat.
+				Integer lobortis efficitur accumsan.</p>
+			</section>
+		</main>
+
 		<script src="main.js"></script>
 	</body>
 </html>
