Basic stat tracking idea

--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -16,6 +16,8 @@
 
 		<main>
 			<section id="stats">
+				<p>Living protozoa: <span id="protNum">0</span></p>
+
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 				Morbi eleifend porta eros, sit amet viverra massa interdum ac.
 				Praesent eu odio et ligula luctus placerat sed ut quam. In hac
