Add bctNum stat

--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -16,7 +16,10 @@
 
 		<main>
 			<section id="stats">
-				<p>Living protozoa: <span id="protNum">0</span></p>
+				<ul>
+					<li>Living protozoa: <span id="protNum">0</span></li>
+					<li>Living bacteria: <span id="bctNum">0</span></li>
+				</ul>
 
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 				Morbi eleifend porta eros, sit amet viverra massa interdum ac.
