Track average genome

--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -21,6 +21,9 @@
 					<li>Living bacteria: <span id="bctNum">0</span></li>
 				</ul>
 
+				<label>Average genome</label>
+				<ul id="avgGen"></ul>
+
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 				Morbi eleifend porta eros, sit amet viverra massa interdum ac.
 				Praesent eu odio et ligula luctus placerat sed ut quam. In hac
