Basic config system

--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -56,6 +56,9 @@
 			</section>
 
 			<section id="config">
+				<label for="pxScale">Pixel scale</label>
+				<input id="pxScale" type="number" value="0">
+
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 				Morbi eleifend porta eros, sit amet viverra massa interdum ac.
 				Praesent eu odio et ligula luctus placerat sed ut quam. In hac
