Add width and height settings

--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -56,8 +56,22 @@
 			</section>
 
 			<section id="config">
-				<label for="pxScale">Pixel scale</label>
-				<input id="pxScale" type="number" value="0">
+				<ul>
+					<li>
+						<label for="pxScale">Pixel scale</label>
+						<input id="pxScale" type="number" value="0">
+					</li>
+
+					<li>
+						<label for="width">Width (cells)</label>
+						<input id="width" type="number" value="0">
+					</li>
+
+					<li>
+						<label for="height">Height (cells)</label>
+						<input id="height" type="number" value="0">
+					</li>
+				</ul>
 
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 				Morbi eleifend porta eros, sit amet viverra massa interdum ac.
