--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -51,6 +51,10 @@
 						<input id="stepEnergy" type="number" value="0">
 					</li>
 					<li>
+						<label for="protMax">Max number of alive protozoa</label>
+						<input id="protMax" type="number" value="0">
+					</li>
+					<li>
 						<label for="protMaxEnergy">Energy cap for protozoa</label>
 						<input id="protMaxEnergy" type="number" value="0">
 					</li>
