Better input validation

--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -63,7 +63,7 @@
 						<input id="protRepEnergy" type="number" value="0">
 					</li>
 					<li>
-						<label for="bctEnergy">Energy gained from consuming a bacterium</label>
+						<label for="bctEnergy">Energy change from consuming a bacterium</label>
 						<input id="bctEnergy" type="number" value="0">
 					</li>
 				</ul>
