Implement rotEnergyMul setting

--- a/tools/simulation/dev.html
+++ b/tools/simulation/dev.html
@@ -51,6 +51,10 @@
 						<input id="stepEnergy" type="number" value="0">
 					</li>
 					<li>
+						<label for="rotEnergyMul">Protozoa rotation energy change multiplier</label>
+						<input id="rotEnergyMul" type="number" value="0">
+					</li>
+					<li>
 						<label for="protMax">Max number of alive protozoa</label>
 						<input id="protMax" type="number" value="0">
 					</li>
